# Embedded_Linux

./: README.md  task1_Script.sh
AdminLinux_1/: README.md
AdminLinux_2/: main.c
AdminLinux_3/: readme.md  script.sh
AdminLinux_4/: readme.md  task4_Script.sh
EmbeddedLinux_1/: README.md
EmbeddedLinux_1/SourceFiles/: addition.c  division.c  main.c  modulus.c  multiplication.c  subtraction.c
EmbeddedLinux_2/EmbeddedLinux_Task3/: README.md
EmbeddedLinux_2/EmbeddedLinux_Task4/: README.md
EmbeddedLinux_2/EmbeddedLinux_Task4/MakeFile/: makefile
EmbeddedLinux_2/EmbeddedLinux_Task4/SrcCode/APP/: main.c  main.elf
EmbeddedLinux_2/EmbeddedLinux_Task4/SrcCode/MCAL/Include/: DIO.h  DIO_Registers.h  Port.h  Port_Config.h  Port_Priv.h
EmbeddedLinux_2/EmbeddedLinux_Task4/SrcCode/MCAL/Lib/: DIO.c  Port.c  Port_Config.c
EmbeddedLinux_3/: CMakeLists.txt  main.c
EmbeddedLinux_3/Include/: addition.h  division.h  modulus.h  multiplication.h  subtraction.h
EmbeddedLinux_4/: README.md
EmbeddedLinux_5/: README.md
EmbeddedLinux_6/: README.md
EmbeddedLinux_7/: README.md
Exam/: backup_script.sh
